--- a/example_configuration.yaml
+++ b/example_configuration.yaml
@@ -1,4 +1,4 @@
 climate:
-  platform: heatmiserneo
-  host: <Insert IP Address / Hostname>
-  port: 4242
+  - platform: heatmiserneo
+    host: <Insert IP Address / Hostname>
+    port: 4242
