--- a/custom_components/heatmiserneo/manifest.json
+++ b/custom_components/heatmiserneo/manifest.json
@@ -6,6 +6,7 @@
   "dependencies": [],
   "codeowners": ["MindrustUK"],
   "requirements": ["neohubapi>=0.4"],
+  "version": "0.1.0",
   "zeroconf": [
     {"type":"_hap._tcp.local.", "name": "Heatmiser neoHub*"}
   ]
