--- a/custom_components/heatmiserneo/services.yaml
+++ b/custom_components/heatmiserneo/services.yaml
@@ -1,21 +1,21 @@
-boost_heating_on:
-  name: Boost Heating On
-  description: Set the boost mode ON defining the period of time and the desired target temperature for the boost.
+hold_on:
+  name: Temperature Hold On
+  description: Instruct the NeoStat or NeoStats specified to 'hold' a specified temperature for a specified period of time.
   target:
     entity:
       integration: heatmiserneo
       domain: climate
   fields:
-    boost_duration:
-      name: Boost Duration
-      description: Set the duration for the boost (hh:mm:ss).
+    hold_duration:
+      name: Hold Duration
+      description: Set the duration for the hold (hh:mm:ss).
       default: '01:00:00'
       example: '01:00:00'
       selector:
         duration:
-    boost_temperature:
+    hold_temperature:
       name: Temperature
-      description: Set the target temperature for the boost period.
+      description: Set the target temperature to hold.
       default: 20
       example: 20
       selector:
@@ -24,9 +24,9 @@ boost_heating_on:
           max: 35
           step: 1
           unit_of_measurement: °
-boost_heating_off:
-  name: Boost Heating Off
-  description: Set the boost mode OFF.
+hold_off:
+  name: Temperature Hold Off
+  description: Return the NeoStat(s) to its default state (Auto or Standby).
   target:
     entity:
       integration: heatmiserneo
